--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
-{
+{"scripts": {
+  "start": "node backend/app.js",
+  "server": "nodemon backend/app.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -23,6 +27,7 @@
     "moment": "^2.29.4",
     "mongoose-findorcreate": "^3.0.0",
     "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
