--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
-{"scripts": {
+{"name": "backend",
+"version": "1.0.0",
+"description": "",
+"main": "app.js",
+  "scripts": {
   "start": "node backend/app.js",
   "server": "nodemon backend/app.js",
   "test": "echo \"Error: no test specified\" && exit 1"
