--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,42 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/styled": "^11.10.8",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.11.14",
+    "@mui/styled-engine-sc": "^5.11.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "install": "^0.13.0",
-    "npm": "^9.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "start": "^5.1.0",
-    "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "antd": "^5.3.2",
     "axios": "^1.2.3",
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
-    "express-async-handler": "^1.2.0",
-    "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.3",
-    "express-validator": "^6.14.3",
-    "gapi": "^0.0.3",
-    "gapi-script": "^1.2.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.28",
     "moment": "^2.29.4",
-    "mongoose-findorcreate": "^3.0.0",
-    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
+    "npm": "^9.6.2",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
@@ -46,13 +33,19 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "path": "^0.12.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-mui-multiselect-dropdown": "^1.0.3",
     "react-router-dom": "^6.7.0",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
+    "start": "^5.1.0",
+    "styled-components": "^5.3.9",
+    "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
   "scripts": {
